# kanji-data

./: Cargo.toml  README.md
examples/glyphs/: main.rs
examples/xmpls/: main.rs
src/: built.rs  built_examples.rs  examples.rs  lib.rs  records.rs  tests.rs
