[package]
name = "kanji-data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "update"
path = "src/bin/update/main.rs"
test = false

[[example]]
name = "glyphs"
path = "examples/glyphs/main.rs"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
csv = "1.3.0"
anyhow = "1.0.86"

[dev-dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
